methods.picture.MethodsPicture.scala.error
Compilation error:
MethodsPicture:4: error: type yellow is not a member of object java.awt.Color
  setCouleurBrosse(c:Color.yellow)
                           ^MethodsPicture:4: error: not found: value c
  setCouleurBrosse(c:Color.yellow)
                   ^MethodsPicture:18: error: type red is not a member of object java.awt.Color
  setCouleurBrosse(c:Color.red)
                           ^MethodsPicture:18: error: not found: value c
  setCouleurBrosse(c:Color.red)
                   ^MethodsPicture:32: error: type blue is not a member of object java.awt.Color
  setCouleurBrosse(c:Color.blue)
                           ^MethodsPicture:32: error: not found: value c
  setCouleurBrosse(c:Color.blue)
                   ^MethodsPicture:46: error: type green is not a member of object java.awt.Color
  setCouleurBrosse(c:Color.green)
                           ^MethodsPicture:46: error: not found: value c
  setCouleurBrosse(c:Color.green)
                   ^